<resources>
    <string name="app_name">ArriendamEstaMobile</string>
    <string name="title_home">Inicio</string>
    <string name="title_profile">Perfil</string>
    <string name="title_notifications">Peticiones</string>
    <string name="title_log_out">Cerrar Sesion</string>
    <string name="el_casoplon">El Casoplon</string>
    <string name="propiedad_en_arriendo">Propiedad en Arriendo</string>
    <string name="pesos">1\'900.000</string>
    <string name="descripcion">Casa con excelente ubicacion, arriendala no piedas esta excelente oportunidad</string>
    <string name="valor">Valor:</string>
    <string name="metros_cuadrados">Metros Cuadrados:</string>
    <string name="m2valor">1500</string>
    <string name="ubicacion">Ubicacion:</string>
    <string name="ubicacion_valor">Subayork</string>
    <string name="hacer_peticion">Hacer Peticion</string>
    <string name="profile_name">profile_name</string>
    <string name="profile_name_placeholder">Tanjiro Kamado</string>
    <string name="profile_image_description">Profile Image</string>
    <string name="calificacion">Calificación</string>
    <string name="datos">Datos</string>
    <string name="reviews">Reviews</string>
    <string name="inmuebles">Inmuebles</string>
    <string name="genero_row_label">Genero</string>
    <string name="edad_row_label">Edad</string>
    <string name="numero_de_contacto_row_label">Numero de contacto</string>
    <string name="email_row_label">Email</string>
    <string name="zenitsu">Zenitsu</string>
    <string name="star_icon">Star icon</string>
    <string name="review_content_placeholder">Le pongo 5 estrellas solo porque me gusta su hermana</string>
    <string name="review_score_placeholder">5</string>
    <string name="profile_picture_of_review">Profile picture of review</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="min">min</string>
    <string name="max">max</string>

    <string-array name="locations">
        <item>Ninguno</item>
        <item>Suba</item>
        <item>en barbiland</item>
        <item>Usme</item>
        <item>Fontibon</item>
    </string-array>
    <string name="login">Login</string>
    <string name="background_image_of_login">Background image of login</string>
    <string name="arriendamesta">ArriendamEsta</string>
    <string name="como_esta_ninguna">Como esta ninguna</string>
    <string name="usuario_label">Usuario:</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña:</string>
    <string name="contrasena_placeholder">Contraseña</string>
    <string name="volver">Volver</string>
    <string name="crea_tu_cuenta">Crea tu cuenta</string>
    <string name="crear_usuario">Crear Usuario</string>
    <string name="nombre">Nombre</string>
    <string name="nombre_placeholder">Nombre:</string>
    <string name="correo_placeholder">Correo:</string>
    <string name="correo">Correo</string>
    <string name="n_mero_telefonico">Número telefonico:</string>
    <string name="n_mero_de_contacto">Número de contacto</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="fecha_de_nacimiento_placeholder">Fecha de nacimiento:</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento</string>
    <string name="genero_placeholder">Genero:</string>
    <string name="confirmar_contrase_a_placeholder">Confirmar contraseña:</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="peticion_recibida">Petición Recibida</string>
    <string name="peticion_enviada">Petición Enviada</string>
    <string name="buscar">Buscar</string>
</resources>