<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/round_border"
    android:padding="16dp">

    <TextView
        android:id="@+id/review_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/zenitsu"
        app:layout_constraintStart_toEndOf="@+id/review_img"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/review_img"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/zenitsu"
        android:contentDescription="@string/profile_picture_of_review" />

    <ImageView
        android:id="@+id/star"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_marginStart="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/review_score"
        app:layout_constraintStart_toEndOf="@+id/review_score"
        app:layout_constraintTop_toTopOf="@+id/review_score"
        app:srcCompat="@drawable/star"
        android:contentDescription="@string/star_icon" />

    <TextView
        android:id="@+id/review_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/review_score_placeholder"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/review_author"
        app:layout_constraintTop_toBottomOf="@+id/review_author" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/review_content_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/review_score"
        app:layout_constraintTop_toBottomOf="@+id/review_score" />
</androidx.constraintlayout.widget.ConstraintLayout>